change style on the picture page as does not fit correctly in heroku

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -263,7 +263,6 @@ input[type="checkbox"] {
 
 .container-hairSection img {
   height: 500px;
-  margin: 50px;
   width: 500px;
   object-fit: cover; }
 
