--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -367,7 +367,7 @@ input[type="checkbox"] {
 
 .container-hairSection img {
   height: 500px;
-  margin: 50px;
+  // margin: 50px;
   width: 500px;
   object-fit: cover;
 }
